Bug 73565 - Autofilter on date creates a "dummy" thing instead of date list
Summary: Autofilter on date creates a "dummy" thing instead of date list
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.0.3 rc
Hardware: All All
: highest critical
Assignee: Kohei Yoshida
URL:
Whiteboard: target:4.3.0 target:4.2.2
Keywords: regression
: 75009 75945 77270 (view as bug list)
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2014-01-13 16:42 UTC by Frederic Mestayer
Modified: 2015-01-24 12:20 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:


Attachments
Autofilter on date bug (33.17 KB, image/png)
2014-01-13 16:42 UTC, Frederic Mestayer
Details
screenshot with correct meta file (33.17 KB, image/png)
2014-01-13 18:18 UTC, GerardF
Details
test document showing the problem (15.68 KB, application/vnd.oasis.opendocument.spreadsheet)
2014-02-19 05:41 UTC, Jean-Baptiste Faure
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Frederic Mestayer 2014-01-13 16:42:14 UTC
Created attachment 91959 [details]
Autofilter on date bug

Create a spredsheet document.
Set the first column as "Date" format.

Name the first line as "Date" for header.
Then enter 3 dates, one by line.

Generate an autofilter.
Click on the down arrow, and.... "dummy" ?

See screenshot
Comment 1 GerardF 2014-01-13 18:18:03 UTC
Created attachment 91969 [details]
screenshot with correct meta file
Comment 2 GerardF 2014-01-13 18:25:55 UTC
Confirmed with Version: 4.3.0.0.alpha0+
Build ID: fb7899e2423d26710200e46f66cf85894525afec
TinderBox: Win-x86@39, Branch:master, Time: 2014-01-08_04:02:07

Regression between 4.1.4 and 4.2.0.
Comment 3 Frederic Mestayer 2014-01-24 10:58:25 UTC
Still there in the latest 4.2.0.3 (4.2 RC3)
I hope it'll be fixed before official release :/
Comment 4 Jean-Baptiste Faure 2014-01-25 10:40:35 UTC
Bouh! This make filtering on dates unusable. Adding to MAB 4.2

Best regards.
Comment 5 Alex Thurgood 2014-01-25 10:54:23 UTC
CCing Calc devs
Comment 6 Frederic Mestayer 2014-02-03 08:30:07 UTC
Bug still there in final 4.2.0.4
Comment 7 gibi 2014-02-16 14:22:53 UTC
Bug still there in version 4.2.1.1 Build ID: d7dbbd7842e6a58b0f521599204e827654e1fb8b Linux X64 DEB
Comment 8 gibi 2014-02-16 22:46:43 UTC
*** Bug 75009 has been marked as a duplicate of this bug. ***
Comment 9 Kohei Yoshida 2014-02-19 04:32:15 UTC
We need a test document.  I can't reproduce this.
Comment 10 Jean-Baptiste Faure 2014-02-19 05:41:54 UTC
Created attachment 94323 [details]
test document showing the problem

Here is a test document. I added a list of dates in the column A and set the autofilter.

Best regards. JBF
Comment 11 Kohei Yoshida 2014-02-19 15:12:53 UTC
Thanks.  Hmm it still works for me.  Perhaps this is French locale specific, since the dates are locale-specific.
Comment 12 Kohei Yoshida 2014-02-19 15:14:01 UTC
Yup, switching LANG to fr_FR.utf-8 and it's reproducible.
Comment 13 Kohei Yoshida 2014-02-20 04:46:42 UTC
I got this.
Comment 14 Commit Notification 2014-02-20 04:48:01 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2be2786879883badd6d0075e63965bacd312ed23

fdo#73565: Populate date members in a locale-safe way.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Kohei Yoshida 2014-02-20 04:48:44 UTC
4.2 backport: https://gerrit.libreoffice.org/8139
Comment 16 Commit Notification 2014-02-20 05:04:03 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7af1124f83df4d96f6ebe58536de7c51406df661&h=libreoffice-4-2

fdo#73565: Populate date members in a locale-safe way.


It will be available in LibreOffice 4.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 17 Kohei Yoshida 2014-02-20 05:21:23 UTC
Fixed.
Comment 18 Jean-Baptiste Faure 2014-02-20 05:51:48 UTC
(In reply to comment #17)
> Fixed.

Thank you very much Kohei !
Verified fixed on version 4.2.3.0.0+. :-)

Do you plan a backport to 4.2.2 ?

Best regards. JBF
Comment 19 Kohei Yoshida 2014-02-20 14:28:23 UTC
(In reply to comment #18)
> (In reply to comment #17)
> > Fixed.
> 
> Thank you very much Kohei !
> Verified fixed on version 4.2.3.0.0+. :-)
> 
> Do you plan a backport to 4.2.2 ?
> 
> Best regards. JBF

I tried, but gerrit is not coorporating.

git push origin HEAD:refs/for/libreoffice-4-2-2
Counting objects: 13, done.
Delta compression using up to 8 threads.
Compressing objects: 100% (7/7), done.
Writing objects: 100% (7/7), 1.45 KiB, done.
Total 7 (delta 6), reused 0 (delta 0)
remote: Resolving deltas: 100% (6/6)
remote: Processing changes: refs: 1, done    
remote: (W) No changes between prior commit 018244d and new commit 430b872
To ssh://logerrit/core.git
 ! [remote rejected] HEAD -> refs/for/libreoffice-4-2-2 (no changes made)
error: failed to push some refs to 'ssh://logerrit/core.git'
Comment 20 Kohei Yoshida 2014-02-20 14:29:14 UTC
And there *is* a change between the commit.  Sorry I don't have time to investigate this right now.  I need to move on.
Comment 21 m_a_riosv 2014-02-20 22:41:25 UTC
Thanks Kohei, nice the new selection for dates.
Verified in:
Version: 4.2.3.0.0+ Build ID: 7af1124f83df4d96f6ebe58536de7c51406df661
   TinderBox: Win-x86@42, Branch:libreoffice-4-2, Time: 2014-02-20_11:39:39
Comment 22 Commit Notification 2014-02-21 12:48:37 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8e2e2b0d2d585839e2ecf339f26336c8f653b0e6&h=libreoffice-4-2-2

fdo#73565: Populate date members in a locale-safe way.


It will be available already in LibreOffice 4.2.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 23 m_a_riosv 2014-03-09 22:58:58 UTC
*** Bug 75945 has been marked as a duplicate of this bug. ***
Comment 24 m_a_riosv 2014-04-10 20:01:11 UTC
*** Bug 77270 has been marked as a duplicate of this bug. ***