fdo#73565: Populate date members in a locale-safe way.

Change-Id: Id90b2829465fada690b0446d6d823e76e792c77b